ci(.github): add envs

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,3 +20,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --silent --frozen-lockfile
       - run: yarn lerna publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
