--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 14.x
       - run: yarn install --silent --frozen-lockfile
-      - run: yarn lerna publish
+      - run: yarn lerna publish -y
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           GH_TOKEN: ${{secrets.GH_TOKEN}}
