--- a/packages/beta/package.json
+++ b/packages/beta/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.0",
   "repository": "git@github.com:alecap7/lerna-semantic-versioning-example.git",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "access": "public"
   }
 }
