--- a/packages/usage/package.json
+++ b/packages/usage/package.json
@@ -7,6 +7,6 @@
     "@etc-tiago/beta": "^0.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "access": "public"
   }
 }
