chore: update package names

--- a/packages/alpha/package.json
+++ b/packages/alpha/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@etc-tiago/alpha",
+  "name": "npm-test-package-alpha-aaaaaaa",
   "version": "0.0.2",
   "repository": "git@github.com:etc-tiago/lerna-semantic-versioning.git",
   "publishConfig": {
