--- a/packages/beta/package.json
+++ b/packages/beta/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@etc-tiago/beta",
+  "name": "npm-test-package-beta-bbbbbbb",
   "version": "0.0.2",
   "repository": "git@github.com:alecap7/lerna-semantic-versioning-example.git",
   "publishConfig": {
