--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,7 @@ jobs:
           git config --global user.email "tiago@etc.digital"
           git config --global user.name "Tiago Souza"
       - run: yarn install --silent --frozen-lockfile
+      - run: node npm.js
       - run: ./node_modules/.bin/lerna publish -y
         env:
           GH_TOKEN: ${{secrets.GH_TOKEN}}
