--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,7 @@ jobs:
           git config --global user.name "Tiago Souza"
       - run: yarn install --silent --frozen-lockfile
       - run: node npm.js
+      - run: npm whoami
       - run: ./node_modules/.bin/lerna publish -y
         env:
           GH_TOKEN: ${{secrets.GH_TOKEN}}
