ci: remove from-git

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
           git config --global user.name "Tiago Souza"
       - run: yarn install --silent --frozen-lockfile
       - run: node npm.js
-      - run: yarn run lerna publish from-git --yes
+     # - run: yarn run lerna publish from-git --yes
+      - run: yarn run lerna publish --yes
         env:
           GH_TOKEN: ${{secrets.GH_TOKEN}}
